deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: blogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: hello-world:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: blogs
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
